tests/num-record-02/out.txt
error: expected a label, found a decimal integer literal
  ┌─ err.sml:1:12
  │
1 │ type t = { 0: int, 1: bool }
  │            ^

parsing failed
